kustomize/apps/volumes-web-app/base/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: volumes-web-app
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-external-default-ingressgateway
  selector:
    matchLabels:
      app: volumes-web-app
